--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       .sidebar { position: sticky; top: 80px; height: calc(100vh - 80px); overflow-y: auto; padding: 20px 0; background: #fff; border-right: 1px solid #dee2e6; }
       .sidebar .nav-link { color: #495057; padding: 0.35rem 1rem; border-radius: 0.25rem; margin: 0.1rem 0.5rem; }
       .sidebar .nav-link:hover, .sidebar .nav-link.active { background-color: #e9ecef; color: #0d6efd; }
-      .sidebar .nav-link[data-bs-toggle="collapse"]::after { content: "Chevron Right"; float: right; font-family: "Font Awesome 5 Free"; font-weight: 900; transition: transform .2s; }
+      .sidebar .nav-link[data-bs-toggle="collapse"]::after { content: '054'; float: right; font-family: "Font Awesome 5 Free"; font-weight: 900; transition: transform .2s; }
       .sidebar .nav-link[data-bs-toggle="collapse"].collapsed::after { transform: rotate(0); }
       .sidebar .nav-link[data-bs-toggle="collapse"]:not(.collapsed)::after { transform: rotate(90deg); }
       .main-content { padding: 2rem; }
