--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
           <a class="nav-link ps-4" href="clients/merge.html">Merge Clients</a>
         </div>
 
+        <a class="nav-link collapsed" data-bs-toggle="collapse" href="#addresses-collapse">Client Addresses</a>
+        <div class="collapse" id="addresses-collapse">
+          <a class="nav-link ps-4" href="addresses/list.html">List Addresses</a>
+          <a class="nav-link ps-4" href="addresses/get.html">Get Address</a>
+          <a class="nav-link ps-4" href="addresses/create.html">Create Address</a>
+          <a class="nav-link ps-4" href="addresses/update.html">Update Address</a>
+          <a class="nav-link ps-4" href="addresses/delete.html">Delete Address</a>
+        </div>
+
         <a class="nav-link collapsed" data-bs-toggle="collapse" href="#orders-collapse">Orders</a>
         <div class="collapse" id="orders-collapse">
           <a class="nav-link ps-4" href="orders/list.html">List Orders</a>
@@ -165,8 +174,17 @@
           <div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">Clients</h5>
-              <p class="card-text">Manage client records, addresses, connections, and merging.</p>
+              <p class="card-text">Manage client records, connections, and merging.</p>
               <a href="clients/list.html" class="btn btn-primary">View Clients API</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Client Addresses</h5>
+              <p class="card-text">Manage client addresses, set default addresses, and handle address types.</p>
+              <a href="addresses/list.html" class="btn btn-primary">View Addresses API</a>
             </div>
           </div>
         </div>
@@ -283,6 +301,15 @@
                 <i class="fas fa-users fa-2x text-primary mb-2"></i>
                 <h6>Clients</h6>
                 <small class="text-muted">6 endpoints</small>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <i class="fas fa-map-marker-alt fa-2x text-info mb-2"></i>
+                <h6>Addresses</h6>
+                <small class="text-muted">5 endpoints</small>
               </div>
             </div>
           </div>
