--- a/index.html
+++ b/index.html
@@ -154,23 +154,59 @@
       <div id="authentication" class="mb-5">
         <h2>Authentication</h2>
         <p>All endpoints require a Bearer token obtained via the authentication endpoint.</p>
-        <div class="card">
+
+        <div class="card mb-3">
           <div class="card-body">
-            <h5 class="card-title"><span class="badge bg-success badge-method">POST</span> <span class="endpoint">/bo_auth</span></h5>
-            <p><strong>Request:</strong></p>
-            <pre><code class="language-json">{
-  "username": "user@example.com",
-  "password": "securePassword123"
-}</code></pre>
-            <p><strong>Response:</strong></p>
-            <pre><code class="language-json">{
-  "data": {
-    "access_token": "eyJ0eXAiOiJKV1QiLCJhbGc...",
-    "user": { ... }
+            <h5 class="card-title"><span class="badge bg-success badge-method">GET</span> <span class="endpoint">/api/login-token</span></h5>
+            <p class="mb-3">Authenticate using HTTP Basic Authentication to obtain an access token.</p>
+
+            <h6>Request Headers:</h6>
+            <pre><code class="language-http">GET /api/v1.0/login-token HTTP/1.1
+Host: backoffice.ddev.site
+Authorization: Basic base64(email:password)</code></pre>
+
+            <h6 class="mt-3">Example using JavaScript:</h6>
+            <pre><code class="language-javascript">const email = 'user@example.com';
+const password = 'securePassword123';
+const credentials = btoa(`${email}:${password}`);
+
+const response = await fetch('https://backoffice.ddev.site/api/login-token', {
+  method: 'GET',
+  headers: {
+    'Authorization': `Basic ${credentials}`
   }
+});</code></pre>
+
+            <h6 class="mt-3">Example using cURL:</h6>
+            <pre><code class="language-bash">curl -X GET "https://backoffice.ddev.site/api/login-token" \
+  -H "Authorization: Basic $(echo -n 'user@example.com:securePassword123' | base64)"</code></pre>
+
+            <h6 class="mt-3">Response:</h6>
+            <pre><code class="language-json">{
+  "data": [{
+    "id": "123",
+    "token": "abc123def456ghi789jkl012mno345pqr678stu901vwx234yz",
+    "type": "access_token",
+    "uid": "456",
+    "expire": 1735689600
+  }]
 }</code></pre>
-            <p>Use the <code>access_token</code> in the <code>Authorization</code> header:</p>
-            <pre><code class="language-bash">Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGc...</code></pre>
+
+            <h6 class="mt-3">Using the Token:</h6>
+            <p>Use the <code>token</code> value in the <code>Authorization</code> header for all subsequent API requests:</p>
+            <pre><code class="language-http">GET /api/v1.0/datatable-clients HTTP/1.1
+Host: backoffice.ddev.site
+Authorization: Bearer abc123def456ghi789jkl012mno345pqr678stu901vwx234yz</code></pre>
+
+            <div class="alert alert-info mt-3 mb-0">
+              <h6 class="alert-heading"><i class="fas fa-info-circle"></i> Token Behavior</h6>
+              <ul class="mb-0">
+                <li>Tokens are reused if a valid unexpired token exists for the user</li>
+                <li>A new token is created only if no valid token exists or if the existing token has expired</li>
+                <li>Check the <code>expire</code> field (Unix timestamp) to know when the token will expire</li>
+                <li>Expired tokens are automatically deleted when attempting to use them</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
