--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p class="mb-3">Authenticate using HTTP Basic Authentication to obtain an access token.</p>
 
             <h6>Request Headers:</h6>
-            <pre><code class="language-http">GET /api/v1.0/login-token HTTP/1.1
+            <pre><code class="language-http">GET /api/login-token HTTP/1.1
 Host: backoffice.ddev.site
 Authorization: Basic base64(email:password)</code></pre>
 
