--- a/consignments/list.html
+++ b/consignments/list.html
@@ -29,7 +29,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="../consignments/list.html">Consignments</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Consignments</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="list.html">List Consignments</a></li>
+            <li><a class="dropdown-item" href="create.html">Create Consignment</a></li>
+            <li><a class="dropdown-item" href="update.html">Update Consignment</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
