--- a/items/create.html
+++ b/items/create.html
@@ -30,7 +30,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="list.html">Items</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Items</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="list.html">List Items</a></li>
+            <li><a class="dropdown-item" href="create.html">Create Item</a></li>
+            <li><a class="dropdown-item" href="update.html">Update Item</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
