new event pusher page

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a class="dropdown-item" href="common.html">Common Parameters</a></li>
             <li><a class="dropdown-item" href="errors.html">Error Handling</a></li>
             <li><a class="dropdown-item" href="data-types.html">Data Types</a></li>
+            <li><a class="dropdown-item" href="pusher-events.html">Pusher Events</a></li>
           </ul>
         </li>
       </ul>
@@ -159,6 +160,7 @@
         <a class="nav-link" href="common.html">Common Parameters</a>
         <a class="nav-link" href="errors.html">Error Handling</a>
         <a class="nav-link" href="data-types.html">Data Types</a>
+        <a class="nav-link" href="pusher-events.html">Pusher Events</a>
       </nav>
     </div>
 
@@ -314,6 +316,15 @@ Authorization: Bearer abc123def456ghi789jkl012mno345pqr678stu901vwx234yz</code><
             </div>
           </div>
         </div>
+        <div class="col-md-6 mb-4">
+          <div class="card h-100 border-info">
+            <div class="card-body">
+              <h5 class="card-title"><i class="fas fa-broadcast-tower text-info"></i> Pusher Events</h5>
+              <p class="card-text">Real-time WebSocket events for entity updates, queue processing, bulk operations, and more.</p>
+              <a href="pusher-events.html" class="btn btn-info">View Pusher Events</a>
+            </div>
+          </div>
+        </div>
       </div>
 
       <hr class="my-5">
@@ -347,6 +358,15 @@ Authorization: Bearer abc123def456ghi789jkl012mno345pqr678stu901vwx234yz</code><
             </div>
           </div>
         </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <h6 class="card-title"><i class="fas fa-broadcast-tower"></i> Pusher Events</h6>
+              <p class="card-text small">Real-time WebSocket events for live updates.</p>
+              <a href="pusher-events.html" class="btn btn-sm btn-outline-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
       </div>
 
       <hr class="my-5">
@@ -368,6 +388,7 @@ Authorization: Bearer abc123def456ghi789jkl012mno345pqr678stu901vwx234yz</code><
             <li class="list-group-item"><i class="fas fa-check text-success"></i> JWT authentication</li>
             <li class="list-group-item"><i class="fas fa-check text-success"></i> JSON request/response format</li>
             <li class="list-group-item"><i class="fas fa-check text-success"></i> Queue-based background jobs</li>
+            <li class="list-group-item"><i class="fas fa-check text-success"></i> Real-time Pusher WebSocket events</li>
             <li class="list-group-item"><i class="fas fa-check text-success"></i> Rate limiting protection</li>
           </ul>
         </div>
